ui: add participants

--- a/TestClients/js/ui/client.css
+++ b/TestClients/js/ui/client.css
@@ -2,6 +2,6 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#users, #chatThreads {
+#users, #chatThreads, #addUsers {
     margin: 10px;
 }
